src/test/compile-fail/direct-obj-fn-call.rs

// error-pattern: mismatched types

obj x() {
  fn hello() {
    log "hello";
  }
}

fn main() {
  x.hello();
}